# nested-routes

./: .gitignore  NOTES.md  Notes.md  README.md  TODO.md  circle.yml  nested-routes.cabal  nested-routes.cabal.old  package.yaml  stack.yaml
examples/: Main.hs  STM.hs
examples/STM/: Auth.hs  Templates.hs
src/Data/Trie/: Pred.hs
src/Data/Trie/Pred/: Rooted.hs
src/Web/Routes/: Nested.hs
src/Web/Routes/Nested/: FileExtListener.hs  Internal.hs  Match.hs  Types.hs  VerbListener.hs
src/Web/Routes/Nested/FileExtListener/: Blaze.hs  Builder.hs  ByteString.hs  Cassius.hs  Clay.hs  Json.hs  Julius.hs  Lucid.hs  Lucius.hs  Text.hs  Types.hs
src/Web/Routes/Nested/Types/: UrlChunks.hs
test/: Test.hs
test/Web/Routes/: NestedSpec.hs
test/Web/Routes/NestedSpec/: Basic.hs
