Name:                   nested-routes
Version:                7.0.0
Author:                 Athan Clark <athan.clark@gmail.com>
Maintainer:             Athan Clark <athan.clark@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Declarative, compositional Wai responses
Category:               Web
Description:
  A method to writing Wai responses
  .
  This library attempts to make it easier to write nice Wai response handlers
  by giving us a Sinatra/
  <https://hackage.haskell.org/package/scotty Scotty>-like syntax for declaring HTTP-verb oriented
  routes, in addition to file-extension handling and rose-tree like composition.
  Not only do we have literal route specification, like
  <https://hackage.haskell.org/package/scotty Scotty> &
  <https://hackage.haskell.org/package/spock Spock>, but we
  can also embed
  <https://hackage.haskell.org/package/attoparsec Attoparsec>
  parsers and <https://hackage.haskell.org/package/regex-compat Regular Expressions>
  /directly/ in our routes, with our handlers
  reflecting their results. You can find more information in the
  <https://www.fpcomplete.com/user/AthanClark/nested-routes demo>.
  and the examples.
Cabal-Version:          >= 1.10
Build-Type:             Simple


Flag Example
  Description:          Build the trivial example.
  Default:              False

Flag Example-STM
  Description:          Build the Sha512 / STM nonce cache example.
  Default:              False


Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Web.Routes.Nested
                        Web.Routes.Nested.Types
                        Web.Routes.Nested.Types.UrlChunks
  Build-Depends:        base >= 4.8 && < 5
                      , attoparsec
                      , bytestring
                      , composition-extra >= 2.0.0
                      , exceptions
                      , hashable
                      , mtl
                      , poly-arity >= 0.0.7
                      , pred-trie >= 0.4.0
                      , regex-compat
                      , semigroups
                      , text
                      , transformers
                      , tries
                      , unordered-containers
                      , wai-transformers >= 0.0.4
                      , wai-middleware-content-type >= 0.1.1.1
                      , wai-middleware-verbs >= 0.1.1


Test-Suite test
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
                      , test
  GHC-Options:          -Wall -threaded
  Main-Is:              Test.hs
  Other-Modules:        Spec
                        Web.Routes.NestedSpec
                        Web.Routes.NestedSpec.Basic
                        Web.Routes.Nested
                        Web.Routes.Nested.Types
                        Web.Routes.Nested.Types.UrlChunks
  Build-Depends:        base
                      , nested-routes
                      , attoparsec
                      , bytestring
                      , composition-extra
                      , exceptions
                      , hashable
                      , http-types
                      , mtl
                      , poly-arity
                      , pred-trie
                      , regex-compat
                      , semigroups
                      , text
                      , transformers
                      , tries
                      , unordered-containers
                      , wai-transformers
                      , wai-middleware-content-type
                      , wai-middleware-verbs
                      , hspec
                      , hspec-wai


Executable example
  if flag(Example)
    Buildable: True
  else
    Buildable: False
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
                      , examples
  GHC-Options:          -Wall -threaded
  Main-Is:              Main.hs
  Other-Modules:        Web.Routes.Nested
                        Web.Routes.Nested.Types
                        Web.Routes.Nested.Types.UrlChunks
  Build-Depends:        base
                      , nested-routes >= 7
                      , attoparsec
                      , bytestring
                      , composition-extra
                      , exceptions
                      , hashable
                      , http-types
                      , mtl
                      , poly-arity
                      , pred-trie
                      , regex-compat
                      , semigroups
                      , text
                      , transformers
                      , tries
                      , unordered-containers
                      , wai-transformers
                      , wai-middleware-content-type
                      , wai-middleware-verbs
                      , warp


Executable example-stm
  if flag(Example-STM)
    Buildable: True
  else
    Buildable: False
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
                      , examples
  GHC-Options:          -Wall
  Main-Is:              STM.hs
  Other-Modules:        STM.Auth
                        Web.Routes.Nested
                        Web.Routes.Nested.Types
                        Web.Routes.Nested.Types.UrlChunks
  Build-Depends:        base
                      , base64-bytestring
                      , blaze-builder
                      , nested-routes
                      , attoparsec
                      , bytestring
                      , composition-extra
                      , cookie
                      , cryptonite
                      , data-default
                      , errors
                      , exceptions
                      , hashable
                      , http-types
                      , iso8601-time
                      , lucid
                      , memory
                      , mtl
                      , poly-arity
                      , pred-trie
                      , regex-compat
                      , semigroups
                      , stm
                      , text
                      , time
                      , transformers
                      , tries
                      , unordered-containers
                      , wai-extra
                      , wai-middleware-content-type
                      , wai-middleware-verbs
                      , wai-transformers
                      , wai-session
                      , warp
                      , utf8-string

Source-Repository head
  Type:                 git
  Location:             https://github.com/athanclark/nested-routes.git
